       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
 13-Mar-2003
Additions:
    1. Select.value is now supported.

 12-Mar-2003
Acknowledgements:
    Thanks to Daniel Jasmin for fixing the handling of applet loading from archives.

Problems fixed:
    1. Applets were not loading properly from applets if a codebase was specified in the <applet> tag.
    2. Bug #700889: Under certain cases, multiple <script> sections in a document caused a problem where only those HTML elements
       defined before the first one were actually available to the scripts.

  9-Mar-2003
Additions:
    1. <noscript> nodes in the body of a page now show their content if a <script> earlier in the page is not recognized.

  7-Mar-2003
Acknowledgements:
    Thanks to Andrew Bickerton for correcting the handling of document.open for non-HTML pages and new pages with
              base tags.

Problems fixed:
    1. calling Document.open() on a non-HTML page no longer throws an exception.
    2. Rewriting a document now properly handles any <base> tags in the new document.


  3-Mar-2003 1.5.2
Acknowledgements:
    Thanks to John Sinclair for noting the lack of line breaks in manifest.mf and proposing a fix
    Thanks to Bernhard Wagner for simplifying some string comparison code in ParsedHTML and WebTable
    Thanks to Bernhard Wagner for adding some parser customization code.
    Thanks to James Howe for noting the mispelling of the getElementById method
    Thanks to Alex Beggs for noting the mishandling of non-JavaScript scripts and providing a test case.
    Thanks to Navid Vahdat for ServletUnit fixes for invalid session handling and request dispatcher paths
    Thanks to Daniel Sheppard for identifying a problem with meta refresh tags.